--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -82,7 +82,8 @@
                     android:id="@+id/imageButton1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/folder_128x128"/>
+                    android:src="@drawable/folder_128x128"
+                    android:onClick="fileChooserOnClickEvent"/>
 
             </LinearLayout>
 
