--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -56,11 +56,59 @@
                 android:layout_weight="1"
                 android:background="#e5373737">
 
-                <EditText
-                    android:id="@+id/imageButton"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/player_editTextUrl"/>
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:weightSum="2"
+                    android:layout_weight="1"
+                    android:background="#e5373737">
+
+                    <Switch
+                        android:id="@+id/player_switchStream"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Streaming"
+                        android:layout_gravity="center_horizontal"/>
+
+                    <Switch
+                        android:id="@+id/player_switchUrl"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Url"
+                        android:layout_gravity="center_horizontal"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:weightSum="2"
+                    android:layout_weight="1"
+                    android:background="#e5373737">
+
+                    <EditText
+                        android:id="@+id/editTextStream"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:hint="@string/player_editTextStream_hint"
+                        android:text="@string/player_editTextStream"/>
+
+                    <EditText
+                        android:id="@+id/editTextUrl"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:hint="@string/player_editTextUrl_hint"
+                        android:text="@string/player_editTextUrl"/>
+
+                </LinearLayout>
+
+
 
             </LinearLayout>
 
@@ -71,12 +119,7 @@
                 android:orientation="vertical"
                 android:background="#e5373737">
 
-                <Switch
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Streaming"
-                    android:id="@+id/player_switch"
-                    android:layout_gravity="center_horizontal"/>
+
 
                 <ImageButton
                     android:id="@+id/imageButton1"
