--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -7,55 +7,88 @@
     android:layout_alignParentTop="true"
     android:layout_alignParentStart="true">
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TabWidget
+            android:id="@android:id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_tab_margin"/>
 
-            <TabWidget
-                android:id="@android:id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_tab_margin"/>
 
-            <FrameLayout
-                android:id="@android:id/tabcontent"
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/video_tab_recordVideo"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:weightSum="6"
+                android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/video_tab_recordVideo"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-
-
-                </LinearLayout>
+                    android:id="@+id/camera_preview"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal" />
 
                 <LinearLayout
-                    android:id="@+id/video_tab_playVideo"
+                    android:id="@+id/video_buttonsLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_weight="5"
+                    android:weightSum="2" >
 
-                    <VideoView
-                        android:id="@+id/video_videoView"
+                    <Button
+                        android:id="@+id/button_ChangeCamera"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Switch Camera" />
+
+                    <Button
+                        android:id="@+id/button_capture"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Capture/Stop" />
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/video_tab_streamVideo"
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/video_tab_playVideo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <VideoView
+                    android:id="@+id/video_videoView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent"/>
 
+            </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/video_tab_streamVideo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                </LinearLayout>
+                <ListView
+                    android:id="@+id/video_listView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
-            </FrameLayout>
-        </LinearLayout>
+            </LinearLayout>
+
+        </FrameLayout>
+    </LinearLayout>
 </TabHost>
