--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -8,7 +8,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.nonek.multimediaproyect.MainActivity"
-    android:background="#e52a2a2a"
     android:weightSum="3"
     android:orientation="vertical">
 
@@ -16,8 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:layout_weight="1"
-        android:background="#e5373737">
+        android:layout_weight="1">
 
         <ImageView
             android:id="@+id/player_imageView"
@@ -31,8 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="2"
-        android:background="#e5373737">
+        android:layout_weight="2">
 
         <TextView
             android:id="@+id/player_textViewTittle"
@@ -46,23 +43,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:weightSum="3"
-            android:orientation="horizontal"
-            android:background="#e5373737">
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_weight="1"
-                android:background="#e5373737">
+                android:layout_weight="1">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
                     android:weightSum="2"
-                    android:layout_weight="1"
-                    android:background="#e5373737">
+                    android:layout_weight="1">
 
                     <Switch
                         android:id="@+id/player_switchStream"
@@ -87,8 +81,7 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
                     android:weightSum="2"
-                    android:layout_weight="1"
-                    android:background="#e5373737">
+                    android:layout_weight="1">
 
                     <EditText
                         android:id="@+id/editTextStream"
@@ -116,8 +109,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:orientation="vertical"
-                android:background="#e5373737">
+                android:orientation="vertical">
 
 
 
