--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -9,8 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:weightSum="3"
-    tools:context="com.example.mantenimiento.multimediaproyect.RecordActivity"
-    android:background="#3d3d3d">
+    tools:context="com.example.mantenimiento.multimediaproyect.RecordActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -65,6 +64,26 @@
                 android:background="@mipmap/record_play" />
 
         </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30dp"
+            android:text="@string/record_textView_file"/>
+
+        <EditText
+            android:id="@+id/record_editText_fileName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/record_fileName"/>
 
     </LinearLayout>
 
